--- a/src/assets/sass/layout/_invoice.scss
+++ b/src/assets/sass/layout/_invoice.scss
@@ -8,7 +8,7 @@
 
     .invoice-company {
         .logo-image {
-            width: 100px;
+            height: 70px;
             margin-bottom: .5rem;
         }
 
