--- a/src/assets/sass/layout/_mixins.scss
+++ b/src/assets/sass/layout/_mixins.scss
@@ -197,3 +197,9 @@
     -ms-flex-pack: end;
     justify-content: flex-end;
 }
+
+@mixin flex-center() {
+    @include flex();
+    @include flex-align-center();
+    @include flex-justify-center();
+}
