--- a/src/assets/sass/theme/_variables.scss
+++ b/src/assets/sass/theme/_variables.scss
@@ -1,12 +1,12 @@
 //reused color variables
 $shade000:#ffffff !default;    //surface
 $shade100:#f8f9fa !default;    //header background
-$shade200:#e9ecef !default;    //hover background
-$shade300:#dee2e6 !default;    //border, divider
-$shade400:#ced4da !default;    //input border
-$shade500:#adb5bd !default;    //input icon
-$shade600:#6c757d !default;    //text secondary color
-$shade700:#495057 !default;    //text color
+$shade200:rgba($primaryColor,.1) !default;    //hover background
+$shade300:#D3D5D6 !default;    //border, divider
+$shade400:#CACCCD !default;    //input border
+$shade500:#414445 !default;    //input icon
+$shade600:#878C8E !default;    //text secondary color
+$shade700:#64686A !default;    //text color
 $shade800:#343a40 !default;    //unused
 $shade900:#212529 !default;    //unused
 
@@ -16,7 +16,7 @@ $fontSize:1rem !default;
 $fontWeight:normal !default;
 $textColor:$shade700 !default;
 $textSecondaryColor:$shade600 !default;
-$borderRadius:3px !default;
+$borderRadius:4px !default;
 $transitionDuration:.2s !default;
 $formElementTransition:background-color $transitionDuration, color $transitionDuration, border-color $transitionDuration, box-shadow $transitionDuration !default;
 $actionIconTransition:background-color $transitionDuration, color $transitionDuration, box-shadow $transitionDuration !default;
@@ -595,7 +595,7 @@ $stepsItemNumberBorderRadius:50% !default;
 $stepsItemActiveFontWeight:600 !default;
 
 //progressbar
-$progressBarHeight:1.5rem !default;
+$progressBarHeight:1rem !default;
 $progressBarBorder:0 none !default;
 $progressBarBg:$shade300 !default;
 $progressBarValueBg:$primaryColor !default;
