--- a/src/app/demo/view/tabledemo.component.html
+++ b/src/app/demo/view/tabledemo.component.html
@@ -7,7 +7,7 @@
 					 styleClass="p-datatable-customers" [rowHover]="true" [rows]="10" [paginator]="true"
 					 [filterDelay]="0" [globalFilterFields]="['name','country.name','representative.name','status']">
 				<ng-template pTemplate="caption">
-					<div class="table-header">
+					<div class="p-d-flex p-flex-column p-flex-md-row p-jc-md-between table-header">
 						Customers
 						<span class="p-input-icon-left">
                     <i class="pi pi-search"></i>
@@ -99,7 +99,7 @@
 					 styleClass="p-datatable-customers p-datatable-gridlines p-datatable-striped p-datatable-sm"
 					 [scrollable]="true" scrollHeight="600px" [filterDelay]="0" [globalFilterFields]="['name','country.name','representative.name','status']">
 				<ng-template pTemplate="caption">
-					<div class="table-header">
+					<div class="p-d-flex p-flex-column p-flex-md-row p-jc-md-between table-header">
 						Customers
 						<span class="p-input-icon-left">
                     <i class="pi pi-search"></i>
@@ -175,7 +175,7 @@
 	<div class="p-col-12">
 		<div class="card">
 			<h4>Row Expand</h4>
-			<p-table [value]="products" dataKey="name">
+			<p-table [value]="products" dataKey="name" styleClass="p-datatable-customers rowexpand-table">
 				<ng-template pTemplate="header">
 					<tr>
 						<th style="width: 3rem"></th>
@@ -188,17 +188,17 @@
 					</tr>
 				</ng-template>
 				<ng-template pTemplate="body" let-product let-expanded="expanded">
-					<tr>
-						<td>
-							<button type="button" pButton pRipple [pRowToggler]="product" class="p-button-text p-button-rounded p-button-plain" [icon]="expanded ? 'pi pi-chevron-down' : 'pi pi-chevron-right'"></button>
-						</td>
-						<td>{{product.name}}</td>
-						<td><img [src]="'assets/demo/images/product/' + product.image" [alt]="product.name" width="100" class="p-shadow-4" /></td>
-						<td>{{product.price | currency:'USD'}}</td>
-						<td>{{product.category}}</td>
-						<td><p-rating [ngModel]="product.rating" [readonly]="true" [cancel]="false"></p-rating></td>
-						<td><span [class]="'product-badge status-' + product.inventoryStatus.toLowerCase()">{{product.inventoryStatus}}</span></td>
-					</tr>
+                    <tr>
+                        <td>
+                            <button type="button" pButton pRipple [pRowToggler]="product" class="p-button-text p-button-rounded p-button-plain" [icon]="expanded ? 'pi pi-chevron-down' : 'pi pi-chevron-right'"></button>
+                        </td>
+                        <td><span class="p-column-title">Name</span>{{product.name}}</td>
+                        <td><span class="p-column-title">Image</span><img [src]="'assets/demo/images/product/' + product.image" [alt]="product.name" width="100" class="p-shadow-4" /></td>
+                        <td><span class="p-column-title">Price</span>{{product.price | currency:'USD'}}</td>
+                        <td><span class="p-column-title">Category</span>{{product.category}}</td>
+                        <td><span class="p-column-title">Reviews</span><p-rating [ngModel]="product.rating" [readonly]="true" [cancel]="false"></p-rating></td>
+                        <td><span class="p-column-title">Status</span><span [class]="'product-badge status-' + product.inventoryStatus.toLowerCase()">{{product.inventoryStatus}}</span></td>
+                    </tr>
 				</ng-template>
 				<ng-template pTemplate="rowexpansion" let-product>
 					<tr>
@@ -216,14 +216,14 @@
 										</tr>
 									</ng-template>
 									<ng-template pTemplate="body" let-order>
-										<tr>
-											<td>{{order.id}}</td>
-											<td>{{order.customer}}</td>
-											<td>{{order.id}}</td>
-											<td>{{order.amount | currency:'USD'}}</td>
-											<td><span [class]="'order-badge order-' + order.status.toLowerCase()">{{order.status}}</span></td>
-											<td><p-button type="button" icon="pi pi-search"></p-button></td>
-										</tr>
+                                        <tr>
+                                            <td><span class="p-column-title">Id</span>{{order.id}}</td>
+                                            <td><span class="p-column-title">Customer</span>{{order.customer}}</td>
+                                            <td><span class="p-column-title">Date</span>{{order.date}}</td>
+                                            <td><span class="p-column-title">Amount</span>{{order.amount | currency:'USD'}}</td>
+                                            <td><span class="p-column-title">Status</span><span [class]="'order-badge order-' + order.status.toLowerCase()">{{order.status}}</span></td>
+                                            <td><p-button type="button" icon="pi pi-search"></p-button></td>
+                                        </tr>
 									</ng-template>
 									<ng-template pTemplate="emptymessage">
 										<tr>
@@ -242,7 +242,8 @@
 	<div class="p-col-12">
 		<div class="card">
 			<h4>Row Group and Scrolling</h4>
-			<p-table [value]="customers3" sortField="representative.name" sortMode="single" (onSort)="onSort()" [scrollable]="true" scrollHeight="600px">
+			<p-table [value]="customers3" sortField="representative.name" sortMode="single" (onSort)="onSort()" [scrollable]="true" scrollHeight="600px"
+                     styleClass="p-datatable-customers">
 				<ng-template pTemplate="header">
 					<tr>
 						<th>Name</th>
@@ -260,22 +261,22 @@
 						</td>
 					</tr>
 					<tr>
-						<td>
-							{{customer.name}}
-						</td>
-						<td>
-							<img src="assets/demo/flags/flag_placeholder.png" [class]="'flag flag-' + customer.country.code" width="30">
-							<span class="image-text" style="margin-left: .5em">{{customer.country.name}}</span>
-						</td>
-						<td>
-							{{customer.company}}
-						</td>
-						<td>
-							<span [class]="'customer-badge status-' + customer.status">{{customer.status}}</span>
-						</td>
-						<td>
-							{{customer.date}}
-						</td>
+                        <td><span class="p-column-title">Name</span>
+                            {{customer.name}}
+                        </td>
+                        <td><span class="p-column-title">Country</span>
+                            <img src="assets/demo/flags/flag_placeholder.png" [class]="'flag flag-' + customer.country.code" width="30">
+                            <span class="image-text" style="margin-left: .5em">{{customer.country.name}}</span>
+                        </td>
+                        <td><span class="p-column-title">Company</span>
+                            {{customer.company}}
+                        </td>
+                        <td><span class="p-column-title">Status</span>
+                            <span [class]="'customer-badge status-' + customer.status">{{customer.status}}</span>
+                        </td>
+                        <td><span class="p-column-title">Date</span>
+                            {{customer.date}}
+                        </td>
 					</tr>
 				</ng-template>
 			</p-table>
