--- a/src/assets/sass/layout/_config.scss
+++ b/src/assets/sass/layout/_config.scss
@@ -1,100 +1,230 @@
 .layout-config {
-    width: 16em;
-    height: 100%;
     position: fixed;
+    padding: 0;
+    top: 0px;
     right: 0;
-    top: 0;
-    padding: 1rem;
-    overflow: auto;
-    background: #ffffff;
+    width: 240px;
     z-index: 999;
-    border-left: 0 none;
-    transform: translateX(100%);
-    transition: transform .4s cubic-bezier(.05,.74,.2,.99);
+    height: 100%;
+    transform: translate3d(240px, 0px, 0px);
+    @include transition(transform $transitionDuration);
+    background-color: #ffffff;
+    box-shadow: 0 24px 64px -2px rgba(0, 0, 0, 0.02), 0 6px 16px -2px rgba(0, 0, 0, 0.06), 0 2px 6px -2px rgba(0, 0, 0, 0.08);
 
     &.layout-config-active {
-        transform: translateX(0);
-        box-shadow: 0 2px 4px -1px rgba(0,0,0,.2), 0 4px 5px 0 rgba(0,0,0,.14), 0 1px 10px 0 rgba(0,0,0,.12);
+        transform: translate3d(0px, 0px, 0px);
 
-        .layout-config-content {
-            .layout-config-button {
-                i {
-                    transform: rotate(360deg);
+        .layout-config-button {
+            i {
+                @include rotate(360deg);
+            }
+        }
+    }
+
+    .layout-config-options {
+        &.p-grid {
+            margin: 0 -.5em;
+        }
+
+        .p-md-6 {
+            padding: .5em;
+        }
+    }
+
+    .layout-config-button {
+        display: block;
+        position: absolute;
+        width: 52px;
+        height: 52px;
+        line-height: 52px;
+        background-color: $primaryColor;
+        text-align: center;
+        top: 230px;
+        left: -51px;
+        z-index: -1;
+        cursor: pointer;
+        color: #ffffff;
+        @include transition(background-color $transitionDuration);
+
+        i {
+            font-size: 32px;
+            line-height: inherit;
+            cursor: pointer;
+            @include rotate(0deg);
+            @include transition(transform 1s);
+        }
+
+        &:hover {
+            background-color: darken($primaryColor, 5%);
+        }
+    }
+
+    .layout-config-content {
+        position: relative;
+        height: 100%;
+        overflow: auto;
+
+        .layout-config-form {
+            overflow: auto;
+            overflow-x: hidden;
+        }
+
+        .layout-config-header {
+            padding: 18px 12px;
+            margin-bottom: 12px;
+            background-image: linear-gradient(90deg,$primaryColor 10%,lighten($primaryColor, 8%) 100%);
+
+            > h3 {
+                font-size: 16px;
+                font-weight: 500;
+                margin: 0;
+                margin-bottom: 12px;
+                color:#ffffff;
+            }
+
+            > span {
+                font-size: 12px;
+                display: block;
+                color:#ffffff;
+            }
+        }
+
+        .layout-config-section {
+            padding: 10px 12px;
+
+            .section-name {
+                font-weight: 500;
+                font-size: 12px;
+                display: block;
+                color: $textColor;
+            }
+
+            &.dark, &.ripple {
+                @include flex();
+                @include flex-align-center();
+
+                .section-name {
+                    margin-right: 18px;
+                }
+
+                .p-inputswitch {
+                    .p-inputswitch-on,
+                    .p-inputswitch-off {
+                        padding: 0;
+                    }
+                }
+            }
+
+            &.colors {
+                .layout-config-colors {
+                    margin: -.25em;
+                    margin-top: 3px;
+
+                    .p-col-fixed {
+                        padding: .5em;
+                    }
+                }
+            }
+
+            &.options {
+                .layout-config-options {
+                    margin-top: 3px;
+
+                    .p-radiobutton {
+                        width: 100%;
+                    }
+
+                    label {
+                        font-size: 12px;
+                        margin: 0;
+                        margin-left: 6px;
+                        vertical-align: text-top;
+                    }
+                }
+
+            }
+
+            a {
+                @include flex-center();
+                @include flex-direction-column();
+                overflow: hidden;
+                @include transition(transform $transitionDuration);
+                position: relative;
+                color: $textColor;
+                text-transform: capitalize;
+
+
+                &:hover {
+                    @include scale(1.1);
+                }
+
+                &.layout-config-option {
+                    .layout-config-option-text {
+                        margin-top: .2em;
+                    }
+
+                    .layout-config-option-color {
+                        width: 24px;
+                        height: 24px;
+                        @include border-radius(4px);
+                        position: relative;
+                        overflow: hidden;
+
+                        .layout-config-option-accentcolor {
+                            display: block;
+                            width: 18px;
+                            height: 28px;
+                            position: absolute;
+                            bottom: -10px;
+                            right: -7px;
+                            transform: rotate(45deg);
+                        }
+                    }
+
+                    .layout-config-option-check-mask {
+                        position: absolute;
+                        top: 0;
+                        left: 0;
+                        width: 100%;
+                        height: 100%;
+                        pointer-events: none;
+                        @include flex-center();
+
+                        i {
+                            @include flex-center();
+                            font-size: 12px;
+                            color: $primaryColor;
+                            @include border-radius(50%);
+                            background-color: #ffffff;
+                            width: 16px;
+                            height: 16px;
+                            box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+                            z-index: 1;
+                        }
+                    }
                 }
             }
         }
-    }
-
-    p {
-        line-height: 1.5rem;
-        color: $textSecondaryColor;
-    }
-
-    .layout-themes {
-        @include flex();
-        @include flex-wrap(wrap);
-
-        > div {
-            padding: .25rem;
-        }
 
 
-        a {
-            width: 2rem;
-            height: 2rem;
-            border-radius: $borderRadius;
-            display: block;
-            position: relative;
-            @include flex-align-center();
-            @include flex-justify-center();
-            transition: transform $transitionDuration;
-            box-shadow: 0 .125rem .25rem rgba(0,0,0,.075);
-
-            i {
-                font-size: 1rem;
-                position: absolute;
-                top: 50%;
-                left: 50%;
-                margin-left: -.5rem;
-                margin-top: -.5rem;
-                color: #ffffff;
-            }
-
-            &:hover {
-                transform: scale(1.1);
-            }
-        }
     }
 }
 
-.layout-config-button {
-    display: block;
-    position: fixed;
-    width: 3rem;
-    height: 3rem;
-    line-height: 3rem;
-    background: $primaryColor;
-    color: $primaryTextColor;
-    text-align: center;
-    top: 50%;
-    right: 0;
-    margin-top: -1.5rem;
-    border-top-left-radius: $borderRadius;
-    border-bottom-left-radius: $borderRadius;
-    transition: background-color $transitionDuration;
+.blocked-scroll-config {
     overflow: hidden;
-    cursor: pointer;
-    z-index: 999;
-    box-shadow: -.25rem 0 1rem rgba(0,0,0,.15);
+}
 
-    i {
-        font-size: 2rem;
-        line-height: inherit;
-        transform: rotate(0deg);
-        transition: transform 1s;
-    }
 
-    &:hover {
-        background: lighten($primaryColor, 5%);
+@media (max-width: 992px) {
+    .layout-config {
+        height: 100%;
+        width: 70vw;
+        transform: translate3d(70vw, 0px, 0px);
+
+        &.layout-config-active {
+            transform: translate3d(0px, 0px, 0px);
+        }
     }
 }
+
+
