--- a/src/assets/sass/layout/_help.scss
+++ b/src/assets/sass/layout/_help.scss
@@ -4,7 +4,7 @@
     }
 
     .help-search {
-        background: url("../../layout/images/pages/bg-help.png") repeat;
+        background: rgba($primaryColor, .2);
         padding: 0;
         text-align: center;
 
@@ -28,10 +28,11 @@
             i {
                 color: $textColor;
                 width: 2rem;
+                font-size: 1.5rem;
                 position: absolute;
                 margin-left: 1rem;
                 top: 50%;
-                margin-top: -.5rem;
+                margin-top: -.75rem;
             }
         }
     }
@@ -73,7 +74,8 @@
         border-radius: 4px;
         margin: 3rem 2rem;
         position: relative;
-        box-shadow: 0 3px 1px -2px rgba(0,0,0,.2), 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12);
+        border: 2px solid rgba($primaryColor, .2);
+        background: rgba($primaryColor, .1);
 
         &:last-child {
             margin-bottom: 1rem;
@@ -93,13 +95,13 @@
 
             h1 {
                 font-size: 1.25rem;
-                color: #ffffff;
+                color: #6C7276;
                 margin-bottom: 1rem;
                 font-weight: 700;
             }
 
             span {
-                color: #ffffff;
+                color: #6C7276;
                 font-weight: 600;
             }
         }
@@ -115,18 +117,6 @@
                 border-radius: 50%;
 
             }
-        }
-
-        &:nth-child(1) {
-            background-image: url("../../layout/images/pages/help/blog1.jpg");
-        }
-
-        &:nth-child(2) {
-            background-image: url("../../layout/images/pages/help/blog2.jpg");
-        }
-
-        &:nth-child(3) {
-            background-image: url("../../layout/images/pages/help/blog3.jpg");
         }
     }
 }
