--- a/src/assets/sass/layout/_layout.scss
+++ b/src/assets/sass/layout/_layout.scss
@@ -1,7 +1,8 @@
-@import '_variables';
+@import './_variables';
 @import '../overrides/_layout_variables';
 @import './_mixins';
 @import '../_fonts';
+@import './_animations';
 @import './_utils';
 @import './_dashboard';
 @import './_login';
